--- a/frontend/public/css/index.css
+++ b/frontend/public/css/index.css
@@ -29,9 +29,9 @@
 
     .login-container {
         background-color: #fff;
-        padding: 40px;
+        padding: 20px;
         border-radius: 10px;
-        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+        /* box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); */
         width: 100%;
         max-width: 400px;
         text-align: center;
@@ -46,11 +46,11 @@
         margin-bottom: 10px;
     }
 
-    .login-container p {
+    /* .login-container p {
         font-size: 16px;
         margin-bottom: 25px;
         color: #555;
-    }
+    } */
 
     .form-group {
         text-align: left;
@@ -126,6 +126,31 @@
         flex-direction: column;
         gap: 10px;
     }
+.divider-forms{
+    width: 100%;
+    height: 2px;
+    background-color: #44444E;
+    
+}
+a#openModal {
+    cursor: pointer;
+    text-decoration: underline;
+    color: #0F0E0E;
+    font-weight: 900;
+}
+
+.error-mensaje {
+  font-size: 0.85rem;
+  margin-top: 4px;
+  display: block;
+
+  
+  color:#DC143C;
+ 
+  font-weight: bold;
+
+}
+
 
     /* MEDIA QUERYS*/
     @media (max-width: 480px) {
