--- a/frontend/views/pages/usuarios.ejs
+++ b/frontend/views/pages/usuarios.ejs
@@ -25,7 +25,7 @@
           </tr>
         </thead>
         <tbody>
-          <% if (usuarios.length> 0) { %> <% usuarios.forEach(u=> { %>
+          <% if (usuariosEncontrados.length> 0) { %> <% usuariosEncontrados.forEach(u=> { %>
               <tr>
                 <td>
                   <%= u.id %>
