--- a/frontend/views/partials/nav.ejs
+++ b/frontend/views/partials/nav.ejs
@@ -56,7 +56,7 @@
         <span class="fs-4"><i class="bi bi-moon"></i></span>
       </div>
 
-      <!-- Logout -->
+      <!-- Cerrar sesión -->
       <button id="logoutBtn" class="btn btn-danger">
         <i class="bi bi-box-arrow-right"></i> Cerrar sesión
       </button>
